--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
         run: yarn test
       
       - name: Publish to Chromatic
-        uses: chromaui/action@v1
+#         uses: chromaui/action@v1
         # Chromatic GitHub Action options
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
